@@ -6,6 +6,7 @@
 * CyberSource: Handling Canadian bank accounts [heavyblade] #4764
 * CyberSource Rest: Fixing currency detection [heavyblade] #4777
 * CyberSource: Allow business rules for requests with network tokens [aenand] #4764
+* Adyen: Update Mastercard error messaging [kylene-spreedly] #4770
 
 == Version 1.129.0 (May 3rd, 2023)
 * Adyen: Update selectedBrand mapping for Google Pay [jcreiff] #4763
